# diskcutter

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  package-lock.json  package.json  vite.config.js
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: CHANGELOG.md  MORNING-MERGE-PLAN.md  PERFORMANCE.md  ROADMAP.md  TODO.md  architecture.md  burn-queue.md  db-cli.md  eject-feature.md  macos-pipeline.md  morning-2026-05-13.md  performance.md  roadmap.md  rust-img-qcow2-improvements.md  status.md
docs/code-review/: deepseek-2026-05-14.md  kimi-2026-05-14.md
scripts/: check-i18n.mjs  db  release-notes.mjs
src/: App.jsx  app-derive.js  components.jsx  format.js  job-reducers.js  keymap.js  main.jsx  styles.css  toast.js  tweaks-panel.jsx
src-tauri/: Cargo.toml  Info.plist  build.rs  catalog.json  catalog.schema.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: benchmark.rs  hash_bench.rs
src-tauri/icons/: README.md  icon.icns
src-tauri/macos/: entitlements.plist
src-tauri/migrations/: 0001_initial.sql  0002_burn_jobs.sql  0002_burn_params.sql  0003_image_scans.sql  0004_burn_jobs_unique_job_id.sql  0005_integer_primary_keys.sql
src-tauri/src/: backup.rs  catalog.rs  cli.rs  commands.rs  disk_arb.rs  disks.rs  doctor.rs  forensic.rs  hash.rs  helper.rs  image.rs  image_scan.rs  inspect.rs  joblog.rs  lib.rs  main.rs  pipeline.rs  qemu.rs  snapshot.rs  source.rs  sparse.rs  url_fetch.rs  validate.rs  xz_footer.rs
src-tauri/src/db/: migrations.rs  mod.rs
src-tauri/src/decoder_chain/: block_view.rs  disk_reader.rs  format.rs  identify.rs  interface.rs  mod.rs  raw.rs
src-tauri/src/decoder_chain/formats/: adapter.rs  bzip2.rs  gzip.rs  mod.rs  xz.rs  zstd.rs
src-tauri/src/readers/: bzip2.rs  gzip.rs  magic.rs  mod.rs  qcow2.rs  raw.rs  vhd.rs  vhdx.rs  vmdk.rs  xz.rs  zstd.rs
src-tauri/src/writers/: block.rs  mod.rs  pipelined.rs  plain.rs  raw.rs
src-tauri/tests/: burn_integration.rs
src/hooks/: useFda.js
src/i18n/: index.js
src/i18n/locales/: de.json  en.json  es.json
src/store/: queue.js
tests/: app-derive.test.js  format.test.js  i18n-parity.test.js  job-reducers.test.js  keymap.test.js  setup.js  toast.test.jsx
tests/components/: danger-banner.test.jsx  disk-picker.test.jsx  job-row.test.jsx  sidebar.test.jsx  toolbar.test.jsx  window-chrome.test.jsx
tests/tweaks/: tweak-controls.test.jsx  use-tweaks.test.jsx
website/: README.md  index.html  styles.css
