[package]
name = "disk-cutter"
version = "0.4.0-alpha"
description = "Brutalist disk-image writer"
authors = ["Chris Thomas <chris.alex.thomas@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/antimatter-studios/diskcutter"

[lib]
name = "disk_cutter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
plist = "1"
libc = "0.2"
rusqlite = { version = "0.32", features = ["bundled"] }
flate2 = "1"
xz2 = "0.1"
bzip2 = "0.6"
zstd = "0.13"
am-img-qcow2 = "0.2"
am-img-vhd = "0.2"
am-img-vhdx = "0.2"
am-img-vmdk = "0.2"
am-fs-core = "0.2"

[dev-dependencies]
tempfile = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
